# ChangeLog for media-libs/gstreamer
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.190 2007/11/17 11:34:12 drac Exp $

*gstreamer-0.10.15 (17 Nov 2007)

  17 Nov 2007; Samuli Suominen <drac@gentoo.org> +gstreamer-0.10.15.ebuild:
  Version bump.

  01 Nov 2007; Raúl Porcel <armin76@gentoo.org> gstreamer-0.10.14.ebuild:
  sparc stable wrt #190900, thanks to Alex Maclean for testing

  11 Oct 2007; Tom Gall <tgall@gentoo.org> gstreamer-0.10.14.ebuild:
  stable on ppc64

  26 Sep 2007; Raúl Porcel <armin76@gentoo.org> gstreamer-0.10.14.ebuild:
  alpha/ia64 stable wrt #190900

  21 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  gstreamer-0.10.14.ebuild:
  Stable on amd64 wrt bug #190900.

  10 Sep 2007; nixnut <nixnut@gentoo.org> gstreamer-0.10.14.ebuild:
  Stable on ppc wrt bug 190900

  09 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  gstreamer-0.10.14.ebuild:
  x86 stable, bug 190900

  03 Sep 2007; Jeroen Roovers <jer@gentoo.org> gstreamer-0.10.14.ebuild:
  Stable for HPPA (bug #190900).

  02 Sep 2007; Samuli Suominen <drac@gentoo.org>
  +files/gstreamer-0.10.14-gstcaps.patch, gstreamer-0.10.14.ebuild:
  Include a fix from upstream, doesn't fix anything in tree but allows
  installation of plugins from gst CVS against 0.10.14 core.

  01 Sep 2007; Samuli Suominen <drac@gentoo.org> gstreamer-0.10.14.ebuild:
  Remove invalid files from dodoc wrt #189538.

  15 Aug 2007; Roy Marples <uberlord@gentoo.org> gstreamer-0.10.14.ebuild:
  elibtoolize again for sane .so versioning on FreeBSD.

*gstreamer-0.10.14 (09 Aug 2007)

  09 Aug 2007; Zaheer Abbas Merali <zaheerm@gentoo.org>
  +gstreamer-0.10.14.ebuild:
  version bump

  26 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  gstreamer-0.10.12.ebuild:
  Stable on sparc

*gstreamer-0.10.13 (25 Jul 2007)

  25 Jul 2007; Zaheer Abbas Merali <zaheerm@gentoo.org>
  +gstreamer-0.10.13.ebuild:
  version bump
