@@ -2,8 +2,8 @@ AUX gstreamer-0.10.14-gstcaps.patch 506 RMD160 7d77743a78dfae975c025f659c7f3036a
 DIST gstreamer-0.10.12.tar.bz2 1841766 RMD160 7130942d3cc1c8da19a6595ed4b6b19460c64b3f SHA1 7e3eb7cd0cc06f49e24110f8a011b738014ae46d SHA256 cd979d0f500968493656d3549830b0e46a0a108e964b56c90360279e8804c6e9
 DIST gstreamer-0.10.14.tar.bz2 2004318 RMD160 6e6f75c89da223ac42a0ab3cc1642b24007a9181 SHA1 29e02be4dbf50272086e436f3fab2dcfadaaff2b SHA256 e684179e63262c7271dbc50e64ead205cae013daac7264d8effbf60fed3f2438
 DIST gstreamer-0.10.15.tar.bz2 2158226 RMD160 7ac386da5da752ed9b6071d9d60022b35c33c074 SHA1 fec69cb10e23e230061ea53cc347a24a9dc2db80 SHA256 581bc480fadeace5be05291dae634065e56986d13037fbcee0ba126cb9435abb
-EBUILD gstreamer-0.10.12.ebuild 1996 RMD160 0e5fdc5d9af19aec838494cff0d4aa9919486af5 SHA1 6ca395093ef28d29f282c8c8eb3fba24afb7fa7f SHA256 a32eaf2f65b8f463093628e13b6630a9ae6f34d5f9c39e02a5f0bc207dde2131
-EBUILD gstreamer-0.10.14.ebuild 2201 RMD160 e69417a1d7fef3e27e4c484397df55cbc8d3d93c SHA1 2b91e3546cf837f490b72a16330526bef1bf1cb7 SHA256 5bf4bd3eed5d8512818a166ac3a792e881d4eb43912a18506e832a1dbb5c27ad
-EBUILD gstreamer-0.10.15.ebuild 2228 RMD160 22c32a64a0973b4fe0435c276b7f7e82ab8387fb SHA1 31469431f8b2e94b1403e8176e6637cff71e8ac7 SHA256 7f3e02ba7800b6d3ba60f283dada8247058a09a25cfbbcf8ea78b4cda9ac6972
-MISC ChangeLog 24750 RMD160 aaf115a79cac7f8556024f0948858009cee3e78c SHA1 f42d73bc5b2d3cf2189e7c8c4e48b2a8cd96970f SHA256 8f84327cca6129e0f3c7840fb1734c9eb6cecdb468950706064d17b7b5558e08
+EBUILD gstreamer-0.10.12.ebuild 2014 RMD160 47b898d13033e68ff3bf617653a7b477ad87e319 SHA1 dc2ad438af25f2c61a9a9efb79cec05ba34f81be SHA256 9a650b018c8b72b32d52aaf8283fd7026a56ee0e2b0542603696820fa9bd6050
+EBUILD gstreamer-0.10.14.ebuild 2219 RMD160 f61764dc67660cff9e96425a8b63a7916a08a997 SHA1 5826268782b16263958f345f3a62c22f34e5116d SHA256 381e11944ab0fd74f94000aa9c3193d90bdd4501772285de7b21fbe033d6a876
+EBUILD gstreamer-0.10.15.ebuild 2284 RMD160 707718f198a771706a3850787af3b2d0fdcaa18d SHA1 c970f58972a56e003c4f7ae7def97099c66845ac SHA256 5586b69790232fc057f765409303162f22d4547a67ffe91ee2f2337b2dcf4010
+MISC ChangeLog 24934 RMD160 6b1a335b5aa31063d97fc99e5432cb67be0c28f5 SHA1 2268d9a0dfb611f9f51bfe98312f32b82a3f1cb7 SHA256 7b5c6836e7b2212475ad3ad9d464bb3d1e4fd90c2f7a4331ec846df59f755140
 MISC metadata.xml 181 RMD160 51814fbdcf7f32cfe70018b3af7fc798e41ff90d SHA1 faf40c45bd66b0072b95556cf7ab097d3be19511 SHA256 22c215902ccdc7fd8cdb765750fb23ea9d9b6c9d3edb1b45325c3469f8f6ffc5
